Add plans for next step

--- a/docs/数据说明.md
+++ b/docs/数据说明.md
@@ -12,3 +12,9 @@
 首先下载上述网页到 data-china/etf/etf.html 中，再执行 src/get_etf_data.py 即可。
 
 ETF 的详细数据，包括各个 ETF 的名称、代号、以及相关上市基金，脚本会保存在 data-china/etf/etf.json 中。
+
+## 下一步：将 ETF 列表转换为可以交易的基金？
+
+合并各个 ETF 的 fund 这一属性（或许一个 fund 对应多个ETF），然后再爬取基金数据。
+
+对这些 ETF 进行聚类，并找到主成分、或主要类别。
