--- a/docs/数据说明.md
+++ b/docs/数据说明.md
@@ -2,9 +2,9 @@
 ## 基金数据
 基金数据可以用 src/get_data.py 获取，脚本会获取精选基金 list 中的基金历史数据。
 
-基金历史数据将会保存在 data-china/ 中。
+基金历史数据将会保存在 data-china/funds 中。
 
-脚本会事先检查 data-china 中已有的数据，以节省时间。
+脚本会事先检查 data-china/funds 中已有的数据，以节省时间。
 
 ## ETF 数据
 全部 ETF 列表可通过 [此链接](https://zhishubao.1234567.com.cn/#tab=all&alllx=&zsblx=all&allsyl=d&zsbsyl=4&sort=desc) 获取
